--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -9,7 +9,7 @@ server {
   error_page 500 502 503 504 /50x.html;
 
   location / {
-    try_files $uri.html $uri/ =404;
+    try_files $uri $uri.html $uri/ =404;
     expires 0;
   }
 
