--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
   server_name playhyperspace.com;
 
-  root /home/hyperspace/hyperspace/public;
+  root /srv/hyperspace/public;
   index index.html;
 
   error_page 404 /404.html;
